--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>jgrapht-io</artifactId>
             <version>1.5.2</version>
         </dependency>
+        <!-- Ajout de la dépendance Spoon -->
+        <dependency>
+            <groupId>fr.inria.gforge.spoon</groupId>
+            <artifactId>spoon-core</artifactId>
+            <version>10.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
